Aula 11 - static e Abstract

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ADS-POO-2024
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\fabio\\Downloads\\mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ADS-POO-2024
-main.class=Aula2.Exemplo1
+main.class=Aula_10_DB.view.MainAnimal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
